refactoring for generic